# snakeviz

./: .gitignore  .travis.yml  404.html  CHANGELOG.rst  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  handler.py  index.html  main.py  pyproject.toml  setup.py  sitemap.xml  tox.ini  upload.py  viz.py
.github/workflows/: ci.yml
bootstrap/js/: bootstrap.js  bootstrap.min.js
css/: base.css
docs/: mkdocs.yml
docs/docs/: index.md
licenses/: RUNSNAKERUN.txt
mkdocs/: search_index.json
search/: search_index.json
snakeviz/: __init__.py  __main__.py  cli.py  handler.py  ipymagic.py  main.py  pstatsloader.py  stats.py  testing.py  upload.py  viz.py
snakeviz/static/: CallGraph.js  drawsvg.js  snakeviz.css  snakeviz.js  sunburst.js  tooltip.js
snakeviz/static/bootstrap/css/: bootstrap.css
snakeviz/static/tooltip/: tooltip.js
snakeviz/static/viz/: sunburst.js  wheel.js
snakeviz/templates/: dir.html  upload.html  viz.html
snakeviz/tests/: test_pstatsloader.py  test_testing.py  test_upload.py
snakeviz_study/: ipymagic.py
snakeviz_study/static/: drawsvg.js  snakeviz.js
static/: sunburst.js  tooltip.js
templates/: main.html  sunburst.html  viz.html
tests/: test_ipymagic.py  test_snakeviz.py
websnakeviz/: cli.py  handler.py  main.py  pstatsloader.py  upload.py  viz.py
websnakeviz/static/: loading.js  main.css  sunburst.js  tipsy.css  tooltip.css  tooltip.js  wheel.js
websnakeviz/static/tooltip/: tooltip.css  tooltip.js
websnakeviz/static/viz/: wheel.js
websnakeviz/templates/: upload.html  viz.html
(+2 files in other folders)
